--- a/src/components/Shared/Styles/style.css
+++ b/src/components/Shared/Styles/style.css
@@ -20,7 +20,7 @@
 /* ...existing code... */
 
 .card-gradient-border {
-  background: linear-gradient(-160deg, #181818, #666666, #181818);
+  background: linear-gradient(-160deg, transparent, #666666, transparent);
   border-radius: 20px;
   padding: 2px; /* Adjust as needed */
 }
@@ -28,6 +28,12 @@
   background: #0f100f; /* Or your desired background */
   border-radius: 20px;
   padding: 10px; /* Adjust as needed */
+}
+
+.badge-gradient-border {
+  background: linear-gradient(-160deg, transparent, #666666, transparent);
+  border-radius: 10px;
+  padding: 1px; /* Adjust as needed */
 }
 
 a.active {
